web/public/css/style.css
/*--------------------------Global */

body {
	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
	letter-spacing: 0.02em;
	line-height: 1.4em;
	color: #858585;
	font-size: 82.5%;
}

.rounded {
	-moz-border-radius: 5px; /* FF1+ */
	-webkit-border-radius: 5px; /* Saf3+, Chrome */
	border-radius: 5px; /* Opera 10.5, IE 9 */	
}


.margintop {
	margin-top: 20px;
}

.margintopsmall {
	margin-top: 10px;
}

.padtop {
	padding-top: 6px
}
.clearboth {
	clear: both;
}

.clickable {
	cursor: pointer;
	outline: none;
}




a {
	color: #fca961;
}

/*--------------------------Typography */

address, h2 {
	font-weight: bold;
	font-size: 1.6em;
	color: #cdcdcd;
}

.alignright {
	text-align: right;
}
.orange {
	color: #fbb75f;
}

#bookingSystem p.notopmargin {
	margin-top: 0px;
}

span#seeAll {
	font-weight: bold;
	font-size: 1.4em;
	padding: 10px 20px 10px 10px;
	display: block;
	background-image: url(../images/arrow_right.gif);
	background-repeat: no-repeat;
	background-position: right center;
	margin-right: 50px;
}

span#seeAll:hover {
	color: #fbb75f;
}
#week span {
	color: white;
	background-color: #fca961;
	display: block;
	font-size: 1.2em;
	padding: 6px 0px;
	background-image: url(../images/day_bg.png);
	background-repeat: no-repeat;
	background-position: center center;
	margin-right: 0px;
}

#week ul {
	font-size: 0.9em;
}

#week ul li {
	margin: 5px 0 0 0;
	cursor: pointer;
}

#week ul li:hover {
	background-color: #fca961;
	color: white;
}

label {
	font-weight: bold;
}

.smalltext {
	font-size: 0.79em;
	line-height: 1.5em;
}

.medtext {
	font-size: 0.85em;
	line-height: 1.2em;
}

.requiredfield, label.error {
	font-size: 0.79em;
	font-weight: bold;
	font-style: italic;
	height: 15px;
	width: 120px;
	text-align: right;
	float: right;
	color: #fbb75f;
}

.spacer {
	float: right;
	display: inline;
	height: 15px;
	width: 12px;
}

#bookingSystem p {
	margin-top: 20px;
}

.bold {
	font-weight: bold;
}

/*--------------------------Divs */

#wrap {
	width: 780px;
	margin: auto;
	margin-top: 60px;
}


#allSlots {
	background-color: #f7f7f7;
	margin-top: 39px;
}

#week {
	padding: 10px 0px 10px 12px;
	width: 450px;
	clear: both;
	position: relative;
}

.day {
	width: 54px;
	margin-right: 10px;
	text-align: center;
}

/*--------------------------Forms */

input {
	width: 120px;
/*	border: 1px solid #ccc; */
	border: none;
	height: 10px;
	padding: 10px 10px;
	background-color: #f7f7f7;
	/*background-image: url(../images/form.png);
	background-repeat: no-repeat;
	background-position: center center; */
}

input:hover, input:focus {
	background-color: #fde2c3;
/*	background-image: url(../images/form_alert.png) */
}

textarea#invite {
/*	background-image: url(../images/invite.png); */
	height: 48px;
	width: 120px;
	padding: 10px;
	border: none;
/*	border: 1px solid #ccc; */
	background-color: #f7f7f7;
	background-repeat: no-repeat;
	background-position: center center;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 0.8em;
}

textarea#invite:hover, textarea#invite:focus {
/*	background-image: url(../images/invite_alert.png); */
	background-color: #fde2c3;

}

#week input {
	height: auto;
	width: auto;
}

#week label {
	font-weight: normal;
	font-size: 0.9em;
}

#week .checkbox, #week .radio {
	width: 15px;
	height: 19px;
	padding: 0 5px 0 0;
	background: url(../images/checkbox.gif) no-repeat;
	display: block;
	clear: left;
	float: left;
}
#week .radio {
	background: url(../images/radio.gif) no-repeat;
}


/*--------------------------Buttons */



#bookSlot {
	color: white;
	background-color: #fd9463;
	border: none;
	font-size: 1.8em;
	font-weight: bold;
	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
	letter-spacing: 0.02em;	
	background-image: url(../images/book_button.png);
	background-position: top center;
	width: 460px;
	height: 50px;
	outline: none;
	cursor: pointer;
	
}

#bookSlot:hover {
	background-position: 0px -50px;
}
input#bookSlot:focus, #bookSlot:active, input#bookSlot::-moz-focus-inner, #earlierSlot::-moz-focus-inner, #laterSlot::-moz-focus-inner {
	outline: none;
	border: none;
	background-position: 0px -50px;
}

#earlierSlot, #laterSlot {
	background-color: #EAEAEA;
	border: none;
	font-size: 0.9em;
	font-weight: bold;
	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
	letter-spacing: 0.02em;
	width: 100px;
	height: 20px;
	color: #858585;
	text-align: left;
	cursor: pointer;
}

#earlierSlot {
	background-image: url(../images/left.png);
	padding-left: 16px;
}
#laterSlot {
		background-image: url(../images/right.png);
		padding-left: 9px;
		margin-left: 10px
}

#earlierSlot:hover {
	background-position:  0px 20px;
}

#earlierSlot.unclickable:hover {
	 background-position: 0px 0px;
}

#laterSlot.unclickable:hover {
	background-position: 0px 0px;
}

#earlierSlot.unclickable, #laterSlot.unclickable {
	color: #eaeaea;
	cursor: default;
}

#laterSlot:hover {
	background-position: 0px 20px;
}

/*--------------------------Recaptcha */

#recaptcha_image {
	border: 1px silver solid;
}

#recaptcha_reload_btn {
	border: none;
	font-size: 0.85em;
	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
	letter-spacing: 0.02em;
	color: #fca961;
	text-align: right;
	cursor: pointer;
	background-color: white;
	background-image: none;
	width: 90px;
	padding: 0 0;
	height: 1.2em;
		
}

#recaptcha_reload_btn:hover {
	background-position:  0 -30px;
	color: #333;
}

#custom_theme_widget {
}

